--- a/index_modern.html
+++ b/index_modern.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 
-    <div id="header">
+    <header>
     <h1>Wired Brain Coffee</h1>
     <h2>Coffee to keep your brain wired!</h2>
-</div>
+    </header>
 
 <div id="main">
     <!-- registered trademark tag &reg; -->
@@ -47,9 +47,9 @@
         <cite>Jamal, San Francisco, CA</cite>
     </p>
 </div>
-<div id="footer">
+<footer>
     <!-- copyright tag &copy; -->
     &copy; Matt Milner 2024
-</div>
+</footer>
 </body>
 </html>
