cleaned up a bit

--- a/content/recipes.html
+++ b/content/recipes.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hot Cocoa Recipe</title>
+    <!-- link to bootstrap breadcrumb element -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
 
  <header>
 
     <h2>Wired Brain Coffee Extras</h2>
-    
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">Wired Brain Coffee</li>
+        <li class="breadcrumb-item">Recipes</li>
+        <!-- class active made a very subtle change to gray text color -->
+        <li class="breadcrumb-item active">Hot Cocoa</li>
+    </ol>
  </header>
  <article title="Hot Cocoa Recipe">
    
