--- a/index.html
+++ b/index.html
@@ -7,25 +7,29 @@
 </head>
 <body>
 
-    <div id="header">
+    <header>
     <h1>Wired Brain Coffee</h1>
     <h2>Coffee to keep your brain wired!</h2>
-</div>
+    <nav>
+        <!-- navigation goes here -->
+    </nav>
+    </header>
 
-<div id="main">
+<article>
+<section id="main">
     <!-- registered trademark tag &reg; -->
     At Wired Brain Coffee&reg;, we believe that coffee can fuel your active brain needs.
 
     <p>Coffee has <span>long been known</span> to <br>provide a boost to brain activity and increase blood flow.</p>
     <p>Another dubious claim about coffee to try and sell it.</p>
-</div>
-<div id="Testimonials">
+</section>
+<section id="Testimonials">
 
     <h4>Testimonials</h4>
 
     <!-- horizontal rule/ line across page -->
     <hr>
-
+<div>
     <!-- blockquote  element -->
     <blockquote cite="https://www.wiredbraincoffee.com/testimonials/test1.html">
      
@@ -47,9 +51,11 @@
         <cite>Jamal, San Francisco, CA</cite>
     </p>
 </div>
-<div id="footer">
+</section>
+</article>
+<footer>
     <!-- copyright tag &copy; -->
     &copy; Matt Milner 2024
-</div>
+</footer>
 </body>
 </html>
