--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
 <body>
 
     <header>
+        <!-- can make multiple items into one link like below, also this is an example of an ABSOLUTE REFERENCE -->
+         <a href="https://pluralsight.com">
     <h1>Wired Brain Coffee</h1>
     <h2>Coffee to keep your brain wired!</h2>
+        </a>
     <nav>
-        <!-- navigation goes here -->
+        <!-- use emmet to create list ul>li*2 -->
+         <!-- these anchor tags use RELATIVE PATHS -->
+        <ul>
+            <li><a href="./content/recipes.html">Recipes</a></li>
+            <li><a href="./content/nutrition.html">Nutrition Information</a></li>
+        </ul>
     </nav>
     </header>
 
